# xray-bone-fracture-classifier

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
notebooks/: 01_eda.ipynb  02_training_and_evaluation.ipynb
scripts/: compare_runs.py  download_hbfmid.py  evaluate.py  inspect_hbfmid.py  make_classification_dataset.py  predict.py  train.py
src/xray_bone_fracture_classifier/: __init__.py  config.py
src/xray_bone_fracture_classifier/data/: dataloaders.py
src/xray_bone_fracture_classifier/evaluation/: metrics.py
src/xray_bone_fracture_classifier/inference/: predictor.py
src/xray_bone_fracture_classifier/interpretability/: __init__.py  gradcam.py
src/xray_bone_fracture_classifier/models/: baseline_cnn.py  transfer.py
src/xray_bone_fracture_classifier/training/: engine.py
src/xray_bone_fracture_classifier/utils/: device.py  seed.py
tests/: conftest.py  test_app_smoke_no_ui.py  test_forward_pass.py  test_gradcam_smoke.py  test_metrics.py  test_predictor_smoke.py
