[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-bone-fracture-classifier"
version = "0.1.0"
description = "Bone fracture classifier (HBFMID) - training and Streamlit app"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "pillow",
  "torch",
  "torchvision",
  "streamlit",
  "tqdm",
  "kagglehub",
  "pyyaml",
  "pip-system-certs",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]
directml = ["torch-directml"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
  "notebooks/**",
  "**/*.ipynb",
]
